--- a/index.html
+++ b/index.html
@@ -6,8 +6,23 @@
  <title>De Laundry</title>
 </head>
 <body>
-  <h2>
-   this will be exciting and interesting 
-  </h2>
+  <!-- Navigation bar start -->
+    <header>
+     <a href="#" class="logo"> Laundary</a>
+     <ul class="nav">
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">System</a></li>
+      <li><a href="#">Service</a></li>
+      <li><a href="#">Testimonia</a></li>
+      <li><a href="#">Contact</a></li>
+     </ul>
+    </header>
+
+   <!-- Navigation bar end -->
+
+   <!-- js link -->
+   <script src="../static/js/script.js"></script>
+
 </body>
 </html>
