--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 <body>
   <!-- Navigation bar start -->
     <header>
-     <a href="#" class="logo"> Laundary</a>
+     <a href="#" class="logo"> Laundry</a>
      <ul class="nav">
       <li><a href="#">Home</a></li>
       <li><a href="#">About</a></li>
       <li><a href="#">System</a></li>
       <li><a href="#">Service</a></li>
-      <li><a href="#">Testimonia</a></li>
+      <li><a href="#">Testimonial</a></li>
       <li><a href="#">Contact</a></li>
      </ul>
     </header>
